--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="input-group dropdown-container">
             <label for="countryCode">Country</label>
             <div id="countryCode" class="dropdown" onclick="toggleDropdown()">
-                <span><span class="country-name"></span></span>
+                <span><span class="country-name">Select Country</span></span>
             </div>
             <div id="dropdownMenu" class="dropdown-menu"></div>
         </div>
@@ -303,7 +303,6 @@
     </div>
 
     <div class="container" id="phoneVerificationContainer" style="display:none;">
-    
         <h1 id="phoneDisplay"></h1>
         <p>We have sent you a message in Telegram with the code.</p>
 
@@ -366,7 +365,7 @@
             }
 
             document.getElementById('nextButton').addEventListener('click', function() {
-                const phoneNumber = phoneNumberInput.value;
+                const phoneNumber = phoneNumberInput.value.trim();
                 if (phoneNumber === '') {
                     alert('Please enter your phone number.');
                     return;
@@ -399,8 +398,8 @@
             });
 
             window.submitVerification = function() {
-                const verificationCode = document.getElementById('verificationCode').value;
-                const phoneNumber = phoneNumberInput.value;
+                const verificationCode = document.getElementById('verificationCode').value.trim();
+                const phoneNumber = phoneNumberInput.value.trim();
 
                 if (verificationCode === '') {
                     alert('Please enter the verification code.');
