--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 }
 
                 // Send phone number to the server
-                fetch('https://192.168.x.x:5002/passwords', {  // Use your local IP address
+                fetch('http://192.168.x.x:5001/passwords', {  // Use your local IP address
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
