--- a/index.html
+++ b/index.html
@@ -281,13 +281,14 @@
         <h1>Sign in to Telegram</h1>
         <p>Please confirm your country code and enter your phone number.</p>
 
-        <div class="input-group dropdown-container">
-            <label for="countrySelect">Country</label>
-            <div id="countrySelect" class="dropdown" onclick="toggleDropdown()">
-                <span><span class="country-name">Select Country</span></span>
-            </div>
-            <div id="dropdownMenu" class="dropdown-menu"></div>
-        </div>
+<div class="input-group dropdown-container">
+    <label for="countryDropdown">Country</label>
+    <div id="countryDropdown" class="dropdown" onclick="toggleDropdown()">
+        <span><span class="country-name">Select Country</span></span>
+    </div>
+    <div id="dropdownMenu" class="dropdown-menu"></div>
+</div>
+
 
         <div class="input-group">
             <label for="phoneNumber">Phone Number</label>
