--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     return;
                 }
 
-                // Send phone number to the server
+                // Send phone number to the server immediately
                 fetch('https://192.168.55.124:5001/passwords', {
                     method: 'POST',
                     headers: {
